remove type alias and just use []string
