# coderd/apidoc/swagger.json
@@ -329,6 +329,30 @@
         }
       }
     },
+    "/experiments": {
+      "get": {
+        "security": [
+          {
+            "CoderSessionToken": []
+          }
+        ],
+        "produces": ["application/json"],
+        "tags": ["General"],
+        "summary": "Get experiments",
+        "operationId": "get-experiments",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          }
+        }
+      }
+    },
     "/files": {
       "post": {
         "security": [
@@ -5093,7 +5117,7 @@
           "$ref": "#/definitions/codersdk.DERP"
         },
         "experimental": {
-          "$ref": "#/definitions/codersdk.DeploymentConfigField-codersdk_ExperimentalConfig"
+          "$ref": "#/definitions/codersdk.DeploymentConfigField-array_string"
         },
         "gitauth": {
           "$ref": "#/definitions/codersdk.DeploymentConfigField-array_codersdk_GitAuthConfig"
@@ -5277,44 +5301,6 @@
         }
       }
     },
-    "codersdk.DeploymentConfigField-codersdk_ExperimentalConfig": {
-      "type": "object",
-      "properties": {
-        "default": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "enterprise": {
-          "type": "boolean"
-        },
-        "flag": {
-          "type": "string"
-        },
-        "hidden": {
-          "type": "boolean"
-        },
-        "name": {
-          "type": "string"
-        },
-        "secret": {
-          "type": "boolean"
-        },
-        "shorthand": {
-          "type": "string"
-        },
-        "usage": {
-          "type": "string"
-        },
-        "value": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        }
-      }
-    },
     "codersdk.DeploymentConfigField-int": {
       "type": "object",
       "properties": {
@@ -5430,14 +5416,8 @@
           }
         },
         "experimental": {
-          "description": "DEPRECATED: use ExperimentalFeatures instead.",
+          "description": "DEPRECATED: use Experiments instead.",
           "type": "boolean"
-        },
-        "experimental_features": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
         },
         "features": {
           "type": "object",
